# meranaw-g2p

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md  usage.md
src/meranaw_g2p/: __init__.py  compiler.py  config.py  errors.py  models.py  pipeline.py  rules.py  tracer.py
src/meranaw_g2p/data/meranaw/: ambiguous.yaml  case.tsv  conventions.tsv  digraphs.tsv  epenthesis.yaml  exceptions.tsv  glottal.yaml  hiatus.yaml  language.yaml
tests/: test_compiler.py  test_config.py  test_pipeline.py  test_rules.py  test_tracer.py
